--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,7 @@
 #USE_SVG=false
 #API_TOKEN=changeme
 
-# OAuth type (either 'google' or 'github')
+# OAuth type (either 'google', 'github', or 'noauth')
 #OAUTH_PROVIDER=google
 
 # Google OpenID
